Bug 1120499: Proxy DoLocalLookup to the worker thread (r=gcp)