toolkit/components/url-classifier/nsUrlClassifierDBService.h
@@ -17,10 +17,12 @@
 #include "nsIUrlClassifierDBService.h"
 #include "nsIURIClassifier.h"
 #include "nsToolkitCompsCID.h"
-#include "nsICryptoHash.h"
 #include "nsICryptoHMAC.h"
 #include "mozilla/Attributes.h"
+#include "mozilla/Mutex.h"
+#include "mozilla/TimeStamp.h"
 
+#include "Entries.h"
 #include "LookupCache.h"
 
 // The hash length for a domain key.
@@ -32,10 +34,19 @@
 // The hash length of a complete hash entry.
 #define COMPLETE_LENGTH 32
 
+using namespace mozilla::safebrowsing;
+
 class nsUrlClassifierDBServiceWorker;
-class nsICryptoHash;
 class nsIThread;
 class nsIURI;
+class UrlClassifierDBServiceWorkerProxy;
+namespace mozilla {
+namespace safebrowsing {
+class Classifier;
+class ProtocolParser;
+class TableUpdate;
+}
+}
 
 // This is a proxy class that just creates a background thread and delagates
 // calls to the background thread.
@@ -91,7 +102,7 @@ private:
   void BuildTables(bool trackingProtectionEnabled, nsCString& tables);
 
   nsRefPtr<nsUrlClassifierDBServiceWorker> mWorker;
-  nsCOMPtr<nsIUrlClassifierDBServiceWorker> mWorkerProxy;
+  nsRefPtr<UrlClassifierDBServiceWorkerProxy> mWorkerProxy;
 
   nsInterfaceHashtable<nsCStringHashKey, nsIUrlClassifierHashCompleter> mCompleters;
 
@@ -121,10 +132,105 @@ private:
 
   // Thread that we do the updates on.
   static nsIThread* gDbBackgroundThread;
+};
 
-  // nsICryptoHash for doing hash operations on the main thread. This is only
-  // used for nsIURIClassifier.ClassifyLocal
-  nsCOMPtr<nsICryptoHash> mCryptoHashMain;
+class nsUrlClassifierDBServiceWorker MOZ_FINAL :
+  public nsIUrlClassifierDBServiceWorker
+{
+public:
+  nsUrlClassifierDBServiceWorker();
+
+  NS_DECL_THREADSAFE_ISUPPORTS
+  NS_DECL_NSIURLCLASSIFIERDBSERVICE
+  NS_DECL_NSIURLCLASSIFIERDBSERVICEWORKER
+
+  nsresult Init(uint32_t aGethashNoise, nsCOMPtr<nsIFile> aCacheDir);
+
+  // Queue a lookup for the worker to perform, called in the main thread.
+  // tables is a comma-separated list of tables to query
+  nsresult QueueLookup(const nsACString& lookupKey,
+                       const nsACString& tables,
+                       nsIUrlClassifierLookupCallback* callback);
+
+  // Handle any queued-up lookups.  We call this function during long-running
+  // update operations to prevent lookups from blocking for too long.
+  nsresult HandlePendingLookups();
+
+  // Perform a blocking classifier lookup for a given url. Can be called on
+  // either the main thread or the worker thread.
+  nsresult DoLocalLookup(const nsACString& spec,
+                         const nsACString& tables,
+                         LookupResultArray* results);
+
+private:
+  // No subclassing
+  ~nsUrlClassifierDBServiceWorker();
+
+  // Disallow copy constructor
+  nsUrlClassifierDBServiceWorker(nsUrlClassifierDBServiceWorker&);
+
+  // Applies the current transaction and resets the update/working times.
+  nsresult ApplyUpdate();
+
+  // Reset the in-progress update stream
+  void ResetStream();
+
+  // Reset the in-progress update
+  void ResetUpdate();
+
+  // Perform a classifier lookup for a given url.
+  nsresult DoLookup(const nsACString& spec,
+                    const nsACString& tables,
+                    nsIUrlClassifierLookupCallback* c);
+
+  nsresult AddNoise(const Prefix aPrefix,
+                    const nsCString tableName,
+                    uint32_t aCount,
+                    LookupResultArray& results);
+
+  // Can only be used on the background thread
+  nsCOMPtr<nsICryptoHash> mCryptoHash;
+
+  nsAutoPtr<mozilla::safebrowsing::Classifier> mClassifier;
+  // The class that actually parses the update chunks.
+  nsAutoPtr<ProtocolParser> mProtocolParser;
+
+  // Directory where to store the SB databases.
+  nsCOMPtr<nsIFile> mCacheDir;
+
+  // XXX: maybe an array of autoptrs.  Or maybe a class specifically
+  // storing a series of updates.
+  nsTArray<mozilla::safebrowsing::TableUpdate*> mTableUpdates;
+
+  int32_t mUpdateWait;
+
+  // Entries that cannot be completed. We expect them to die at
+  // the next update
+  PrefixArray mMissCache;
+
+  nsresult mUpdateStatus;
+  nsTArray<nsCString> mUpdateTables;
+
+  nsCOMPtr<nsIUrlClassifierUpdateObserver> mUpdateObserver;
+  bool mInStream;
+
+  // The number of noise entries to add to the set of lookup results.
+  uint32_t mGethashNoise;
+
+  // Pending lookups are stored in a queue for processing.  The queue
+  // is protected by mPendingLookupLock.
+  mozilla::Mutex mPendingLookupLock;
+
+  class PendingLookup {
+  public:
+    mozilla::TimeStamp mStartTime;
+    nsCString mKey;
+    nsCString mTables;
+    nsCOMPtr<nsIUrlClassifierLookupCallback> mCallback;
+  };
+
+  // list of pending lookups
+  nsTArray<PendingLookup> mPendingLookups;
 };
 
 NS_DEFINE_STATIC_IID_ACCESSOR(nsUrlClassifierDBService, NS_URLCLASSIFIERDBSERVICE_CID)
